--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -219,6 +219,14 @@
     <Compile Include="Migrations\201706201545128_ApplyAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201706201545128_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706201607047_AddMembershipTypeName.cs" />
+    <Compile Include="Migrations\201706201607047_AddMembershipTypeName.Designer.cs">
+      <DependentUpon>201706201607047_AddMembershipTypeName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201706201607544_SeedMembershipTypeNames.cs" />
+    <Compile Include="Migrations\201706201607544_SeedMembershipTypeNames.Designer.cs">
+      <DependentUpon>201706201607544_SeedMembershipTypeNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +328,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706201545128_ApplyAnnotationsToCustomerName.resx">
       <DependentUpon>201706201545128_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706201607047_AddMembershipTypeName.resx">
+      <DependentUpon>201706201607047_AddMembershipTypeName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706201607544_SeedMembershipTypeNames.resx">
+      <DependentUpon>201706201607544_SeedMembershipTypeNames.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
