--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -251,6 +251,10 @@
     <Compile Include="Migrations\201706211905282_AddedMovieProperties.Designer.cs">
       <DependentUpon>201706211905282_AddedMovieProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706241347202_GenresAdded.cs" />
+    <Compile Include="Migrations\201706241347202_GenresAdded.Designer.cs">
+      <DependentUpon>201706241347202_GenresAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -261,6 +265,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\MovieFormViewModel.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -329,6 +334,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\MovieForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -377,6 +383,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706211905282_AddedMovieProperties.resx">
       <DependentUpon>201706211905282_AddedMovieProperties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706241347202_GenresAdded.resx">
+      <DependentUpon>201706241347202_GenresAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
