Seeding admin & guest accounts.

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -283,6 +283,10 @@
     <Compile Include="Migrations\201706241434228_AddedRequiredFieldsOnMovie.Designer.cs">
       <DependentUpon>201706241434228_AddedRequiredFieldsOnMovie.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706291921406_SeedUsers.cs" />
+    <Compile Include="Migrations\201706291921406_SeedUsers.Designer.cs">
+      <DependentUpon>201706291921406_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -593,6 +597,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706241434228_AddedRequiredFieldsOnMovie.resx">
       <DependentUpon>201706241434228_AddedRequiredFieldsOnMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706291921406_SeedUsers.resx">
+      <DependentUpon>201706291921406_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
