--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -287,6 +287,10 @@
     <Compile Include="Migrations\201706291921406_SeedUsers.Designer.cs">
       <DependentUpon>201706291921406_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707010921438_AddDrivingLicenseToAppUser.cs" />
+    <Compile Include="Migrations\201707010921438_AddDrivingLicenseToAppUser.Designer.cs">
+      <DependentUpon>201707010921438_AddDrivingLicenseToAppUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -602,6 +606,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706291921406_SeedUsers.resx">
       <DependentUpon>201706291921406_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707010921438_AddDrivingLicenseToAppUser.resx">
+      <DependentUpon>201707010921438_AddDrivingLicenseToAppUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
