--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
     <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\Api\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -224,6 +225,7 @@
     <Compile Include="Dtos\GenreDto.cs" />
     <Compile Include="Dtos\MembershipTypeDto.cs" />
     <Compile Include="Dtos\MovieDto.cs" />
+    <Compile Include="Dtos\NewRentalDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -295,6 +297,14 @@
     <Compile Include="Migrations\201707011416469_AddPhoneNumberToUserAccount.Designer.cs">
       <DependentUpon>201707011416469_AddPhoneNumberToUserAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707161304023_AddingRentalsModel.cs" />
+    <Compile Include="Migrations\201707161304023_AddingRentalsModel.Designer.cs">
+      <DependentUpon>201707161304023_AddingRentalsModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707161306043_RentalDateReturnedMadeNullable.cs" />
+    <Compile Include="Migrations\201707161306043_RentalDateReturnedMadeNullable.Designer.cs">
+      <DependentUpon>201707161306043_RentalDateReturnedMadeNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -305,6 +315,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -619,6 +630,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707011416469_AddPhoneNumberToUserAccount.resx">
       <DependentUpon>201707011416469_AddPhoneNumberToUserAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161304023_AddingRentalsModel.resx">
+      <DependentUpon>201707161304023_AddingRentalsModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161306043_RentalDateReturnedMadeNullable.resx">
+      <DependentUpon>201707161306043_RentalDateReturnedMadeNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
