--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -305,6 +305,10 @@
     <Compile Include="Migrations\201707161306043_RentalDateReturnedMadeNullable.Designer.cs">
       <DependentUpon>201707161306043_RentalDateReturnedMadeNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707161541047_AddedNumberAvailableToMovie.cs" />
+    <Compile Include="Migrations\201707161541047_AddedNumberAvailableToMovie.Designer.cs">
+      <DependentUpon>201707161541047_AddedNumberAvailableToMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -636,6 +640,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707161306043_RentalDateReturnedMadeNullable.resx">
       <DependentUpon>201707161306043_RentalDateReturnedMadeNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707161541047_AddedNumberAvailableToMovie.resx">
+      <DependentUpon>201707161541047_AddedNumberAvailableToMovie.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
